src/test/deca/context/invalid/created/access-denided.deca
class B{
    protected int z;
}
class C extends B{
    int  x;
    int y;
    int getX(){
        return z;
    }
    void incrX(){
        x = x+1;
    }
}
{
    C c = new C();
    c.z=15;
}
